--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    
+    "start": "node dist/index.js",
     "build": "tsc"
   },
   "keywords": [],
